--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -13,6 +13,11 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015", "dom"],
     "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["./components/*"],
+      "@global/*": ["./global/*"],
+      "@routes/*": ["./routes/*"],
+    }
   },
   "exclude": ["node_modules", "**/*.js"]
 }
