--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,11 @@
 		"not dead"
 	],
 	"dependencies": {
+		"final-form": "^4.20.6",
 		"immer": "^9.0.6",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
+		"react-final-form": "^6.5.7",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
@@ -47,6 +49,6 @@
 		"url-loader": "^4.1.1",
 		"webpack": "^5.1.3",
 		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.4.0"
+		"webpack-dev-server": "^4.7.3"
 	}
 }
